fix(UI): modify the UI

--- a/src/app/components/header/index.scss
+++ b/src/app/components/header/index.scss
@@ -2,6 +2,8 @@
 .mainHeader {
   background-color: #fff;
   width: 100%;
+  height: 75px;
+  font-weight: 700;
   position: relative;
   justify-content: space-between;
   .search_form {
