--- a/src/app/pages/details/index.scss
+++ b/src/app/pages/details/index.scss
@@ -32,6 +32,11 @@
         border-radius: 5px;
       }
     }
+    #slider {
+      img {
+        height: 400px;
+      }
+    }
   }
   .list_body {
     position: relative;
