--- a/src/app/_variable.scss
+++ b/src/app/_variable.scss
@@ -95,12 +95,12 @@ $imgpath: '../';
     top: 0;
     opacity: 0;
     transition: all 200ms;
-    height: calc(100% - 46px);
+    height: calc(100% - 21px);
     width: calc(100% - 16px);
     margin: 8px;
     .description {
       padding-top: 15px;
-      height: 209px;
+      height: 178px;
     }
     .price {
       // position: absolute;
@@ -114,11 +114,11 @@ $imgpath: '../';
       opacity: 1;
     }
   }
-  min-height: 300px;
+  min-height: 225px;
   border: 1px solid #dedfe1;
   background-color: #fff;
   width: 100%;
-  margin-bottom: 30px;
+  margin-bottom: 5px;
   .mealImage {
     width: 100%;
     background: url($imgpath+'assets/images/meal-dummy.jpg');
@@ -128,7 +128,8 @@ $imgpath: '../';
   }
   >img {
     width: 100%;
-    min-height: 209px;
+    min-height: 150px;
+    height: 150px;
   }
   .meal_info {
     border-bottom: 1px $inactive solid;
@@ -147,32 +148,36 @@ $imgpath: '../';
     }
   }
   .mealInfo {
-    padding: 10px;
+    padding: 5px;
     padding-left: 15px;
     >h4 {
       display: -webkit-box;
       -webkit-line-clamp: 2;
       -webkit-box-orient: vertical;
+      padding: 0px;
+      margin: 0px;
       overflow: hidden;
       line-height: 20px;
       height: 42px;
     }
   }
   .chefInfo {
-    padding: 10px;
-    margin-top: 15px;
+    padding: 5px;
+    padding-left: 15px;
     white-space: nowrap;
     img {
-      width: 40px;
-      height: 40px;
-      border-radius: 60px;
+      width: 30px;
+      height: 30px;
+      border-radius: 30px;
     }
     & > div {
       display: inline-block;
       vertical-align: middle;
     }
     .chefDetails {
+      width: 50%;
       font-size: 12px;
+      font-weight: 600;
       div:last-child {
         font-size: 10px;
       }
@@ -181,6 +186,8 @@ $imgpath: '../';
     }
     .rating {
       float: right;
+      width: 20%;
+      font-weight: 600;
       font-size: 12px;
       padding-top: 10px;
       div {
@@ -211,8 +218,9 @@ $imgpath: '../';
     margin-top: 10px;
   }
   .price {
-    padding: 10px;
+    padding: 5px;
     padding-left: 15px;
+    font-weight: 600;
     div.btn {
       outline: none!important;
       font-size: 23px;
