fix(UI): remove the X button

--- a/src/app/components/search/index.scss
+++ b/src/app/components/search/index.scss
@@ -9,6 +9,9 @@ ct-search {
       md-autocomplete-wrap {
         box-shadow: none;
       }
+      button {
+        display: none;
+      }
     }
     md-autocomplete-wrap {
       height: auto;
