--- a/src/app/components/search/tpl.html
+++ b/src/app/components/search/tpl.html
@@ -1,5 +1,5 @@
-<div class="search_form row">
-  <div class="col-sm-12 col-md-6 location">
+<div class="search_form row" layout="row" layout-wrap>
+  <div class="location item" flex="50" flex-md="100" flex-sm="100" flex-xs="100">
     <!-- <input type="" name="" placeholder="Delivery Location"> -->
     <md-autocomplete ng-disabled="$ctrl.locality.isDisabled" md-no-cache="$ctrl.locality.noCache" md-selected-item="$ctrl.locality.selectedItem" md-search-text-change="$ctrl.locality.onSearchTextChange($ctrl.locality.searchText)" md-search-text="$ctrl.locality.searchText" md-selected-item-change="$ctrl.locality.onSelectItemChange(item)" md-items="item in $ctrl.locality.querySearch($ctrl.locality.searchText)" md-item-text="item.display" md-min-length="0" placeholder="Delivery Location">
       <md-item-template>
@@ -12,8 +12,8 @@
     </md-autocomplete>
     <i class="material-icons icon">location_on</i>
   </div>
-  <div class="col-sm-12 col-md-6">
-    <div class="col-sm-4 col-xs-4 no-padding-r date">
+  <div class="item" flex="50" flex-md="100" flex-sm="100" flex-xs="100" layout="row" layout-wrap>
+    <div class="no-padding-r date" flex="35" flex-xs="40" style="position: relative;">
       <!-- <input type="" name=""> -->
       <md-autocomplete ng-disabled="$ctrl.delivery_date.isDisabled" md-no-cache="$ctrl.delivery_date.noCache" md-selected-item="$ctrl.delivery_date.selectedItem" md-search-text-change="$ctrl.delivery_date.onSearchTextChange($ctrl.delivery_date.searchText)" md-search-text="$ctrl.delivery_date.searchText" md-selected-item-change="$ctrl.delivery_date.onSelectItemChange(item)" md-items="item in $ctrl.delivery_date.querySearch(ctrl.delivery_date.searchText)" md-item-text="item.display" md-min-length="0" placeholder="Pick" md-menu-class="autocomplete-custom-template">
         <md-item-template>
@@ -29,7 +29,7 @@
       </md-autocomplete>
       <i class="material-icons icon">today</i>
     </div>
-    <div class="col-sm-5 col-xs-8 time">
+    <div class="time" flex="40" flex-xs="60" style="position: relative;">
       <!-- <input type="" name=""> -->
       <md-autocomplete ng-disabled="$ctrl.delivery_time.isDisabled" md-no-cache="$ctrl.delivery_time.noCache" md-selected-item="$ctrl.delivery_time.selectedItem" md-search-text-change="$ctrl.delivery_time.onSearchTextChange($ctrl.delivery_time.searchText)" md-search-text="$ctrl.delivery_time.searchText" md-selected-item-change="$ctrl.delivery_time.onSelectItemChange(item)" md-items="item in $ctrl.delivery_time.querySearch(ctrl.delivery_time.searchText)" md-item-text="item.display" md-min-length="0" placeholder="Pick" md-menu-class="autocomplete-custom-template">
         <md-item-template>
@@ -45,7 +45,7 @@
       </md-autocomplete>
       <i class="material-icons icon">schedule</i>
     </div>
-    <div class="col-sm-3 col-xs-12 text-center">
+    <div class="text-center" flex="25" flex-xs="100">
       <md-button aria-label="search" ng-bind-html="$ctrl.searchBtn | trusted" ng-click="$ctrl.showSearchResults()" ng-disabled="!$ctrl.locality.selectedItem || !$ctrl.delivery_date.selectedItem || !$ctrl.delivery_time.selectedItem"></md-button>
     </div>
   </div>
