--- a/src/app/pages/results/tpl.html
+++ b/src/app/pages/results/tpl.html
@@ -9,10 +9,10 @@
         </div>
       </slick>
     </div>
-    <div class="search_food">
+    <!-- div class="search_food">
       <input type="text" class="form-control ng-pristine ng-untouched ng-valid ng-not-empty" placeholder="Search Food">
       <div class="left_icon"><i class="material-icons">restaurant</i></div>
-    </div>
+    </div -->
     <div class="results_txt">
       <h3>{{$ctrl.meals.length}} RESULTS</h3>
     </div>
