--- a/src/app/pages/details/tpl.html
+++ b/src/app/pages/details/tpl.html
@@ -76,8 +76,9 @@
           </div>
         </div>
         <div class="check" flex-xs="100">
-          <button class="btn btn-default" ng-hide="$ctrl.quantity === 0"><span class="minus" ng-click="$ctrl.decreaseQuantity($ctrl.currentItem)">- </span><span>{{$ctrl.quantity}}</span><span class="plus" ng-click="$ctrl.increaseQuantity($ctrl.currentItem)"> +</span></button>
-          <button class="btn btn-default" ng-click="$ctrl.addToCart($ctrl.currentItem)" ng-show="$ctrl.quantity === 0">Add to Cart <i class="material-icons">local_grocery_store</i></button>
+          <button class="btn btn-default" ng-hide="$ctrl.quantity === 0 || $ctrl.currentItem.qtyAvailable === 0"><span class="minus" ng-click="$ctrl.decreaseQuantity($ctrl.currentItem)">- </span><span>{{$ctrl.quantity}}</span><span class="plus" ng-click="$ctrl.increaseQuantity($ctrl.currentItem)"> +</span></button>
+          <button class="btn btn-default" ng-click="$ctrl.addToCart($ctrl.currentItem)" ng-show="$ctrl.quantity === 0 && $ctrl.currentItem.qtyAvailable > 0">Add to Cart <i class="material-icons">local_grocery_store</i></button>
+          <button class="btn btn-default" ng-show="$ctrl.currentItem.qtyAvailable === 0">SOLD OUT</button>
         </div>
       </div>
     </div>
