fix(checkout): update the locality form

--- a/src/app/pages/checkout/tpl.html
+++ b/src/app/pages/checkout/tpl.html
@@ -68,7 +68,7 @@
                     </div>
                     <md-input-container>
                       <label>UNIT/FLAT/WING/FLOOR NUMBER</label>
-                      <input ng-model="$ctrl.locality.unitNumber" name="unitNumber" required>
+                      <input ng-model="$ctrl.delivery_address.unitNumber" name="unitNumber" required>
                       <div ng-messages="localityForm.unitNumber.$error">
                         <div ng-message="required">This is required.</div>
                         <!-- div ng-message="md-maxlength">This field must be less than 30 characters long.</div -->
@@ -76,7 +76,7 @@
                     </md-input-container>
                     <md-input-container>
                       <label>UNIT/BUILDING NAME</label>
-                      <input ng-model="$ctrl.locality.unitName" name="unitName" required>
+                      <input ng-model="$ctrl.delivery_address.unitName" name="unitName" required>
                       <div ng-messages="localityForm.unitName.$error">
                         <div ng-message="required">This is required.</div>
                         <!-- div ng-message="md-maxlength">This field must be less than 30 characters long.</div -->
@@ -84,7 +84,7 @@
                     </md-input-container>
                     <md-input-container>
                       <label>STREET NAME</label>
-                      <input ng-model="$ctrl.locality.streetName" name="streetName" >
+                      <input ng-model="$ctrl.delivery_address.streetName" name="streetName" >
                       <div ng-messages="localityForm.streetName.$error">
                         <div ng-message="required">This is required.</div>
                         <!-- div ng-message="md-maxlength">This field must be less than 30 characters long.</div -->
@@ -92,7 +92,7 @@
                     </md-input-container>
                     <md-input-container>
                       <label>LANDMARK</label>
-                      <input ng-model="$ctrl.locality.landmark" name="landmark" >
+                      <input ng-model="$ctrl.delivery_address.landmark" name="landmark" >
                       <div ng-messages="localityForm.landmark.$error">
                         <div ng-message="required">This is required.</div>
                         <!-- div ng-message="md-maxlength">This field must be less than 30 characters long.</div -->
@@ -100,7 +100,7 @@
                     </md-input-container>
                     <md-input-container>
                       <label>SUBLOCALITY</label>
-                      <input ng-model="$ctrl.locality.subLocality" name="subLocality" required ng-disabled="true">
+                      <input ng-model="$ctrl.delivery_address.subLocality" name="subLocality" required ng-disabled="true">
                       <div ng-messages="localityForm.subLocality.$error">
                         <div ng-message="required">This is required.</div>
                         <!-- div ng-message="md-maxlength">This field must be less than 30 characters long.</div-->
@@ -108,15 +108,15 @@
                     </md-input-container>
                     <md-input-container>
                       <label>LOCALITY</label>
-                      <input ng-model="$ctrl.locality.locality" name="locality" required ng-disabled="true">
-                      <div ng-messages="localityForm.locality.$error">
+                      <input ng-model="$ctrl.delivery_address.locality" name="locality" required ng-disabled="true">
+                      <div ng-messages="localityForm.delivery_address.$error">
                         <div ng-message="required">This is required.</div>
                         <!-- div ng-message="md-maxlength">This field must be less than 30 characters long.</div -->
                       </div>
                     </md-input-container>
                     <md-input-container>
                       <label>CITY</label>
-                      <input ng-model="$ctrl.locality.city" name="city" required ng-disabled="true">
+                      <input ng-model="$ctrl.delivery_address.city" name="city" required ng-disabled="true">
                       <div ng-messages="localityForm.city.$error">
                         <div ng-message="required">This is required.</div>
                         <!-- div ng-message="md-maxlength">This field must be less than 30 characters long.</div -->
